fix spacings

--- a/pages/blocks/cards/cards.css
+++ b/pages/blocks/cards/cards.css
@@ -492,3 +492,7 @@ main .cards.horizontal .card-container-link:hover {
 main .section .cards + .banner {
   margin-top: var(--section-spacing);
 }
+
+main .section.has-background .cards:first-child {
+  margin-top: 0;
+}
